--- a/AraMentalHealth_SubTask_3.ipynb
+++ b/AraMentalHealth_SubTask_3.ipynb
@@ -997,7 +997,7 @@
         "    toks = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
         "\n",
         "    # 2. Generate the model output\n",
-        "    out = model.generate(**toks, max_new_tokens=1024)\n",
+        "    out = model.generate(**toks, max_new_tokens=1024,temperature=0.1, do_sample=True, top_p=0.9))\n",
         "\n",
         "    # 3. Decode only the generated part (exclude input prompt)\n",
         "    generated_tokens = out[0][toks[\"input_ids\"].shape[1]:]\n",
@@ -1020,7 +1020,7 @@
         "    toks = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
         "\n",
         "    # 2. Generate output\n",
-        "    out = model.generate(**toks, max_new_tokens=1024)\n",
+        "    out = model.generate(**toks, max_new_tokens=1024, temperature=0.1, do_sample=True, top_p=0.9))\n",
         "\n",
         "    # 3. Decode only the generated part\n",
         "    generated_tokens = out[0][toks[\"input_ids\"].shape[1]:]\n",
@@ -1043,7 +1043,7 @@
         "gemini_model = genai.GenerativeModel(\"gemini-2.5-flash\")\n",
         "\n",
         "def gen_gemini(model, prompt):\n",
-        "    response = model.generate_content(prompt)\n",
+        "    response = model.generate_content(prompt, generation_config={"max_output_tokens": 1024, "temperature": 0.1, "top_p": 0.9})\n",
         "    return response.text\n"
       ]
     },
@@ -1066,7 +1066,7 @@
         "    response = openai.ChatCompletion.create(\n",
         "        model=model_name,\n",
         "        messages=[\n",
-        "            {\"role\": \"user\", \"content\": prompt}\n",
+        "            {\"role\": \"user\", \"content\": prompt}\n", max_tokens=1024, temperature=0.1, top_p=0.9
         "        ]\n",
         "    )\n",
         "    return response.choices[0].message.content"
