--- a/AraMentalHealth_SubTask_3.ipynb
+++ b/AraMentalHealth_SubTask_3.ipynb
@@ -1043,7 +1043,7 @@
         "gemini_model = genai.GenerativeModel(\"gemini-2.5-flash\")\n",
         "\n",
         "def gen_gemini(model, prompt):\n",
-        "    response = model.generate_content(prompt, generation_config={"max_output_tokens": 1024, "temperature": 0.1, "top_p": 0.9})\n",
+        "    response = model.generate_content(prompt, max_output_tokens= 1024, temperature= 0.1, top_p= 0.9)\n",
         "    return response.text\n"
       ]
     },
